fix overflow on iphone

--- a/src/component/app.global.css
+++ b/src/component/app.global.css
@@ -8,11 +8,6 @@
 }
 
 body {
-  overflow-x: hidden;
-  overflow-y: visible;
-}
-
-body {
   font-family:
     'Helvetica Neue',
     'Helvetica',
@@ -35,4 +30,9 @@ optgroup,
 select,
 textarea {
   font-family: inherit;
+}
+
+#app {
+  overflow-x: hidden;
+  overflow-y: visible;
 }
